--- a/src/PrimaryFX.fxml
+++ b/src/PrimaryFX.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.MenuButton?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="PrimaryController">
     <children>
@@ -39,6 +42,16 @@
                   <MenuItem fx:id="MI_UpdateItem" mnemonicParsing="false" onAction="#updateItemMenu" text="Update Item" />
                     </items>
                 </MenuButton>
+            <AnchorPane prefHeight="69.0" prefWidth="528.0" />
+            <HBox alignment="CENTER" prefHeight="69.0" prefWidth="430.0">
+               <children>
+                  <Label fx:id="loggedInLabel">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
             </children></HBox>
         <HBox prefHeight="668.0" prefWidth="1280.0">
             <children>
